--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "type": "git",
     "url": "git+https://github.com/milolu/react-fast-ui.git"
   },
+  "files": [
+    "lib",
+    "src"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
